--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-LOGGER_ID=
-MONGO_DB_URI=
-OWNER_ID=
-STRING_SESSION=
+API_ID=25546069
+API_HASH=29ac027d4793027b2cc72352534973fc
+BOT_TOKEN=7871029971:AAH_lbOqcIXQEeyXd9qBrdaMlwdYF1STPis
+LOGGER_ID=-1002405987671
+MONGO_DB_URI=mongodb+srv://nihalanon:LCtHK052uNEOffcw@xinerox.3qcah.mongodb.net/?retryWrites=true&w=majority&appName=xinerox
+OWNER_ID=6400573627
+STRING_SESSION=BQGFzVUAQunMNAfrqRzg_UYZhinDmrI6xX_WjgL2HgeQvwopxjjACF8znI8pMgRV80ERKVuYFhoGZ_CLqLwpOS72W-qrrA1du-5fCyi4jkmWTcPD9gsL76GNKxGjGgUp7CohByy-NlKW2uy9QaFosbnOLdFUq34NnC-ZQxEfy00Rf0sjsYb5Qzi6w01Q-OhderKuf0caMjvpT8lwTm_bCzYMzIztTsi_j7rfHkzdbzYi7JWSYNdJr3WCyK3fhKPbhoN8o9hiYxd-TJtSHrquROlZVxtX4Vf9yj0Op6hLVEunS4eEbW0l0zOcXZ_EoIqYToMY4Y8ohq6m3SHKV-YVMKl1WQARtQAAAAF9gQC7AA
